<resources>
    <string name="app_name">Edu Bridge</string>
    <string name="strHome">Join 100,000+ teachers who\'ve found jobs on Edubridge .</string>
    <string name="btnGet">Get Started</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="welcome_back">Welcome Back !</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Add other strings here -->
    <string name="create_account">Create Account</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP Code</string>
    <string name="expires_in">Expires in</string>
    <string name="expired">Expired</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="app_logo_description">Application Logo</string>

    <string name="forget_your_password">Forget your password</string>
    <string name="or">Or</string>
    <string name="decribes_best">What describes you best?</string>
    <string name="teacher">Teacher</string>
    <string name="i_am_a_teacher_looking_for_a_job">I am a teacher looking for a job!</string>
    <string name="school_authority">School Authority</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="upload_your_resume">Upload your resume</string>
    <string name="save">Save</string>
    <string name="create_profile">Create Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_icon">Add Icon</string>
    <string name="upload_resume">Upload resume</string>
    <string name="no_file_selected">No file selected</string>
    <string name="school_name">School Name</string>
    <string name="school_website_link">School website link</string>
    <string name="notification">Notification</string>
    <string name="job_categories">Job Categories</string>
    <string name="mathematics">Mathematics</string>
    <string name="science">Science</string>
    <string name="language">Language</string>
    <string name="sports">Sports</string>
    <string name="art">Art</string>
    <string name="history">History</string>
    <string name="music">Music</string>
    <string name="literature">Literature</string>
    <string name="school_suggestions">School Suggestions</string>
    <string name="timings">Timings</string>
    <string name="rating">3.4</string>
    <string name="view_more">View more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_with_job_collection">Explore with job collection</string>
    <string name="messaging">Messaging</string>
    <string name="search">Search</string>
    <string name="username">UserName</string>
    <string name="user_name">User Name</string>
    <string name="write_message_here">Write message here ...</string>
    <string name="logout">Log Out</string>
    <string name="_ad">Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="otp_sent">OTP sent to %s</string>
    <string name="otp_failed">Failed to send OTP. Check email and try again.</string>
    <string name="network_error">Network error. Check your connection.</string>
    <string name="edubridge">Edubridge</string>
    <string name="home">Home</string>
    <string name="jobs">Jobs</string>
    <string name="blog">Blogs</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="search_teachers">Search teachers</string>
    <string name="add_job">Add Job</string>
    <string name="my_applicants">My Applicants</string>
    <string name="cancel">Cancel</string>
    <string name="post_job">Post job</string>
    <string name="create_job_posting">Create job posting</string>
    <string name="fill_details_below">Fill details below</string>
    <string name="job_title">Job title</string>
    <string name="subject">Subject</string>
    <string name="job_description">Job description</string>
    <string name="requirements">Requirements</string>
    <string name="your_job_will_be_visible_to_teachers_immediately">Your job will be visible to teachers immediately</string>
    <string name="create_new_job">Create new job</string>
    <string name="create_job">Create Job</string>
    <string name="create_your_first_job_posting_to_attract_qualified_teachers">Create your first job posting to attract qualified teachers</string>
    <string name="no_jobs_posted_yet">No Jobs Posted Yet</string>
    <string name="filter">Filter</string>
    <string name="application_note">Application Note</string>
    <string name="view_profile">View Profile</string>
    <string name="i">New</string>
    <string name="no_applicants_yet">No Applicants Yet</string>
    <string name="when_teachers_apply_to_your_job_they_ll_appear_here">When teachers apply to your job, they\'ll appear here</string>
    <string name="available_teachers">Available Teachers</string>
</resources>