<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Describes">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_220sdp"
                android:src="@drawable/tree_logo"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decribes_best"
                android:textColor="@color/sky"
                android:fontFamily="@font/leckerli_one"
                android:textSize="@dimen/_18sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/teacherBtn"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_describes"
                android:text="@string/teacher"
                android:textColor="@color/darkSky"
                android:textAllCaps="false"
                android:fontFamily="@font/leckerli_one"
                android:textSize="@dimen/_18sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/lexend"
                android:text="@string/i_am_a_teacher_looking_for_a_job"
                android:textColor="@color/lightSky"
                android:textSize="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/schoolBtn"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_describes"
                android:text="@string/school_authority"
                android:textColor="@color/darkSky"
                android:textAllCaps="false"
                android:fontFamily="@font/leckerli_one"
                android:textSize="@dimen/_18sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I am a School authority looking to hire !"
                android:layout_gravity="center"
                android:textColor="@color/lightSky"
                android:fontFamily="@font/lexend"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_7sdp"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>